--- a/src/index.html
+++ b/src/index.html
@@ -5,10 +5,10 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Ali & Cory</title>
-    <meta name="description" content="Celebrating Ali and Cory.">
-    <meta property="og:title" content="Celebrating Ali & Cory">
-    <meta property="og:description" content="Holiday cards from Sky.">
+    <title>Let's Play</title>
+    <meta name="description" content="Let's Play.">
+    <meta property="og:title" content="Let's Play">
+    <meta property="og:description" content="Let's Play.">
     <meta property="og:image" content="/img/og-img.png">
     <link rel="icon" href="/img/og-img.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
