--- a/src/index.html
+++ b/src/index.html
@@ -26,6 +26,23 @@
                 <h1 class="sr-text">
                     Game time!
                 </h1>
+
+                <section class="cardbox">
+                    <div class="card">
+                        <h2 class="card-name">
+                            Name
+                        </h2>
+                        <p class="card-desc">
+                            Description
+                        </p>
+                    </div>
+                    <button class="skip">
+                        Skip
+                    </button>
+                    <button class="success">
+                        Success
+                    </button>
+                </section>
         </div>
     </div>
     <script type="module" src="index.js"></script>
