--- a/src/index.html
+++ b/src/index.html
@@ -79,12 +79,14 @@
                             Description
                         </p>
                     </div>
-                    <button class="skip">
-                        Skip
-                    </button>
-                    <button class="success">
-                        Success
-                    </button>
+                    <div class="cardbox-buttons">
+                        <button class="skip">
+                            Skip
+                        </button>
+                        <button class="success">
+                            Success
+                        </button>
+                    </div>
                 </section>
 
                 <section class="reset">
