--- a/src/index.html
+++ b/src/index.html
@@ -72,12 +72,14 @@
 
                 <section class="cardbox">
                     <div class="card">
-                        <h2 class="card-name">
-                            Name
-                        </h2>
-                        <p class="card-desc">
-                            Description
-                        </p>
+                        <div class="card-inner">
+                            <h2 class="card-name">
+                                Name
+                            </h2>
+                            <p class="card-desc">
+                                Description
+                            </p>
+                        </div>
                     </div>
                     <div class="cardbox-buttons">
                         <button class="skip">
