counts, display counts, UI

--- a/src/index.html
+++ b/src/index.html
@@ -40,14 +40,30 @@
                         <fieldset>
                             <legend>Select team:</legend>
                         
-                            <div>
+                            <div class="team-box">
                                 <input type="radio" id="teamone" name="team" value="1" checked>
                                 <label for="teamone">Team 1</label>
+                                <aside class="team-score">
+                                    <span class="score-label">
+                                        Score:
+                                    </span>
+                                    <span class="score-display">
+                                        0
+                                    </span>
+                                </aside>
                             </div>
                         
-                            <div>
+                            <div class="team-box">
                                 <input type="radio" id="teamtwo" name="team" value="2">
                                 <label for="teamtwo">Team 2</label>
+                                <aside class="team-score">
+                                    <span class="score-label">
+                                        Score: 
+                                    </span>
+                                    <span class="score-display">
+                                        0
+                                    </span>
+                                </aside>
                             </div>
                         </fieldset>
 
