--- a/src/index.html
+++ b/src/index.html
@@ -114,6 +114,12 @@
                 </section>
 
                 <section class="reset">
+                    <button class="copy">
+                        Copy URL to clipboard
+                    </button>
+                </section>
+
+                <section class="reset">
                     <button class="reset">
                         Reset Round
                     </button>
